Maj css fixed footer + mise en place menus page accueil

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -13,27 +13,29 @@
                     <p>ohmyfood</p>
                 </div>
         </header>
+        <!--Menus-->
         <div id="content">
             <section id="top">
-                <div>
+                <div class="menu"> 
                     <img src="resources/menu-1b.png" alt="Menu La note enchantée" title="Menu La note enchantée"/>
                 </div>
-                <div>
+                <div class="menu">
                     <img src="resources/menu-2b.png" alt="Menu Le chic à la Française" title="Menu Le chic à la française"/>
                 </div>
             </section>
             <section id="bottom">
-                <div>
+                <div class="menu">
                     <img src="resources/menu-3b.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/>
                 </div>
-                <div>   
+                <div class="menu">   
                     <img src="resources/menu-4b.png" alt="Menu La palette du goût" title="Menu La palette du goût"/>
                 </div>
             </section>
-            <section id="next">
-                <p>Prochainement</p>
-            </section>
         </div>
+            <!--Prochainement-->
+        <aside id="next">
+            <p>Prochainement</p>
+        </aside>
         <!--Pied de page-->
         <footer>
             <div>
