MAJ css des menus + titres

--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <body>
         <!--En tête de la page-->
         <header>
-                <div id="titre">
-                    <p>ohmyfood</p>
+                <div id="logo">
+                    <img src="resources/logo.png" alt="logo" title="logo" class="entete">
                 </div>
         </header>
         <!--Menus-->
         <div id="content">
             <section id="top">
                 <div class="menu"> 
-                    <img src="resources/menu-1b.png" alt="Menu La note enchantée" title="Menu La note enchantée"/>
+                    <a href="index2.html" class="navigation"><img src="resources/menu-1b.png" alt="Menu La note enchantée" title="Menu La note enchantée"/></a>
                 </div>
                 <div class="menu">
-                    <img src="resources/menu-2b.png" alt="Menu Le chic à la Française" title="Menu Le chic à la française"/>
+                    <a href="index3.html" class="navigation"><img src="resources/menu-2b.png" alt="Menu Le chic à la Française" title="Menu Le chic à la française"/></a>
                 </div>
             </section>
             <section id="bottom">
                 <div class="menu">
-                    <img src="resources/menu-3b.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/>
+                    <a href="index4.html" class="navigation"><img src="resources/menu-3b.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/></a>
                 </div>
                 <div class="menu">   
-                    <img src="resources/menu-4b.png" alt="Menu La palette du goût" title="Menu La palette du goût"/>
+                    <a href="index5.html" class="navigation"><img src="resources/menu-4b.png" alt="Menu La palette du goût" title="Menu La palette du goût"/></a>
                 </div>
             </section>
         </div>
@@ -42,7 +42,7 @@
                 <p>Mentions légales</p>
             </div>
             <div>
-                <p>Contactez-nous</p>
+                <a href="mailto:contact@ohmyfood.fr">Contactez-nous</a>
             </div>
 
         </footer>
