--- a/index5.html
+++ b/index5.html
@@ -17,7 +17,7 @@
         <div id="content">
             <section>
                 <div class="fullm"> 
-                    <img src="resources/menu-2.png" alt="Menu Le chic à la Française" title="Menu Le chic à la Française"/>
+                    <img src="resources/menu-4.png" alt="Menu La palette du goût" title="Menu La palette du goût"/>
                 </div>
             </section>
         </div>
