MAJ code menus html

--- a/index2.html
+++ b/index2.html
@@ -16,9 +16,38 @@
         <!--Menus-->
         <div id="content">
             <section>
-                <div class="fullm"> 
-                    <p id="titre">La note enchantée</p>
-                    <img src="resources/menu-1.png" alt="Menu La note enchantée" title="Menu La note enchantée"/>
+                <div id="titre"> 
+                    <p>La note enchantée</p>
+                </div>
+                <div id="menulne">
+                    <h1>La note enchantée</h1>
+                    <div>
+                        <h2>Prélude</h2>
+                        <p>Ravioles de fois gras accompagnés de leur crème à la truffe</p>
+                        <p>98€</p>
+                        <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                        <p>115€</p>
+                        <p>Homard et espuma de potiron mariné aux zestes d'orange</p>
+                        <p>89€</p>
+                        <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                        <p>105€</p>
+                    </div>
+                    <div>
+                        <h2>Point d'orgue</h2>
+                        <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                        <p>102€</p>
+                        <p>Langoustine poêlée, purée de patate douce</p>
+                        <p>205€</p>
+                        <p>Mijoté de queue de boeuf et riz sauvage aux zestes de citron</p>
+                        <p>169€</p>
+                    </div>
+                    <div>
+                        <h2>Mouvement final</h2>
+                        <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
+                        <p>Baba au rhum revisité avec son coulis de citron</p>
+                        <p>Tarte au citron meringuée destructurée</p>
+                    </div>
+                    <h3>La note enchantée</h3>
                 </div>
             </section>
         </div>
