--- a/index3.html
+++ b/index3.html
@@ -15,11 +15,39 @@
     </header>
         <!--Menus-->
         <div id="content">
-            <section>
-                <div class="fullm"> 
-                    <img src="resources/menu-2.png" alt="Menu Le chic à la Française" title="Menu Le chic à la Française"/>
-                </div>
-            </section>
+                <section>
+                        <div id="titre"> 
+                            <p>Le chic à la française</p>
+                        </div>
+                        <div id="menulcf">
+                            <h1>Le chic à la française</h1>
+                            <div>
+                                <h2>Pour se mettre en appétit</h2>
+                                <p>Tartare de poulpe acidulé aux zestes d'orange</p>
+                                <p>79€</p>
+                                <p>Velouté de légumes d'antan</p>
+                                <p>57€</p>
+                                <p>Soupe à l'oignon revisités</p>
+                                <p>57€</p>
+                            </div>
+                            <div>
+                                <h2>Plaisir des papilles</h2>
+                                <p>Coquilles Saint-Jacques accompagnées d'une purée de Panais</p>
+                                <p>95€</p>
+                                <p>Magret de canard et parmentier de pommes de terres</p>
+                                <p>88€</p>
+                                <p>Pigeonneau d'Ille et Vilaine sur son lit de gnoccis aux légumes</p>
+                                <p>175€</p>
+                            </div>
+                            <div>
+                                <h2>Gourmandises sucrées</h2>
+                                <p>Pétales de violettes glacés et purée de noisette</p>
+                                <p>Fondant au chocolat revisité</p>
+                                <p>Millefeuille croustillant</p>
+                            </div>
+                            <h3>Le chic à la française</h3>
+                        </div>
+                    </section>
         </div>
             <!--Prochainement-->
         <aside id="next">
