--- a/index5.html
+++ b/index5.html
@@ -15,11 +15,42 @@
     </header>
         <!--Menus-->
         <div id="content">
-            <section>
-                <div class="fullm"> 
-                    <img src="resources/menu-4.png" alt="Menu La palette du goût" title="Menu La palette du goût"/>
-                </div>
-            </section>
+                <section>
+                    <div id="titre"> 
+                        <p>La palette du goût</p>
+                    </div>
+                    <div id="menulpg">
+                        <h1>La palette du goût</h1>
+                        <div>
+                            <h2>Esquisse</h2>
+                            <p>Fricassée d'escargot au piment d'espelette</p>
+                            <p>60€</p>
+                            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                            <p>55€</p>
+                            <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                            <p>65€</p>
+                        </div>
+                        <div>
+                            <h2>Oeuvre de maître</h2>
+                            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                            <p>70€</p>
+                            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                            <p>85€</p>
+                            <p>Filet de Turbot aux agrumes</p>
+                            <p>125€</p>
+                        </div>
+                        <div>
+                            <h2>Au sommet de l'art</h2>
+                            <p>Paris-Brest revisité</p>
+                            <p>55€</p>
+                            <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
+                            <p>65€</p>
+                            <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                            <p>60€</p>
+                        </div>
+                        <h3>La palette du goût</h3>
+                    </div>
+                </section>
         </div>
             <!--Prochainement-->
         <aside id="next">
