--- a/index4.html
+++ b/index4.html
@@ -15,11 +15,42 @@
     </header>
         <!--Menus-->
         <div id="content">
-            <section>
-                <div class="fullm"> 
-                    <img src="resources/menu-3.png" alt="Menu Le délice des papilles" title="Menu Le délice des papilles"/>
-                </div>
-            </section>
+                <section>
+                    <div id="titre"> 
+                        <p>Le délice des papilles</p>
+                    </div>
+                    <div id="menuldp">
+                        <h1>Le délice des papilles</h1>
+                        <div>
+                            <h2>Pour bien commencer</h2>
+                            <p>Tartare de thon assaisonné au yuzu</p>
+                            <p>55€</p>
+                            <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                            <p>89€</p>
+                            <p>Velouté de cèpes aux truffes</p>
+                            <p>56€</p>
+                        </div>
+                        <div>
+                            <h2>Pour bien continuer</h2>
+                            <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                            <p>110€</p>
+                            <p>Langouste rôtieet ses légumes de saison</p>
+                            <p>225€</p>
+                            <p>Côte de boeur angus et sa purée de panais</p>
+                            <p>115€</p>
+                        </div>
+                        <div>
+                            <h2>Pour bien terminer</h2>
+                            <p>Farandole de desserts du chef</p>
+                            <p>55€</p>
+                            <p>Crème brûlée revisitée</p>
+                            <p>60€</p>
+                            <p>Tiramisu à la noisette</p>
+                            <p>55€</p>
+                        </div>
+                        <h3>Le délice des papilles</h3>
+                    </div>
+                </section>
         </div>
             <!--Prochainement-->
         <aside id="next">
