MAJ html et css menu LNE flexbox

--- a/index2.html
+++ b/index2.html
@@ -19,34 +19,48 @@
                 <div id="titre"> 
                     <p>La note enchantée</p>
                 </div>
-                <div id="menulne">
+                <div id="menu_lne">
                     <h1>La note enchantée</h1>
-                    <div>
-                        <h2>Prélude</h2>
-                        <p>Ravioles de fois gras accompagnés de leur crème à la truffe</p>
-                        <p>98€</p>
-                        <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                        <p>115€</p>
-                        <p>Homard et espuma de potiron mariné aux zestes d'orange</p>
-                        <p>89€</p>
-                        <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                        <p>105€</p>
+                    <h2>Prélude</h2>
+                    <div id="m_section">
+                        <div class="dish">
+                            <p class="left">Ravioles de fois gras accompagnés de leur crème à la truffe</p>
+                            <p class="right">98€</p>
+                        </div>
+                        <div class="dish">
+                            <p class="left">Caviar osciètre sur blini à la farine de blé noir</p>
+                            <p class="right">115€</p>
+                        </div>
+                        <div class="dish">
+                            <p class="left">Homard et espuma de potiron mariné aux zestes d'orange</p>
+                            <p class="right">89€</p>
+                        </div>
+                        <div class="dish">
+                            <p class="left">Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                            <p class="right">105€</p>
+                        </div>
                     </div>
-                    <div>
-                        <h2>Point d'orgue</h2>
-                        <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
-                        <p>102€</p>
-                        <p>Langoustine poêlée, purée de patate douce</p>
-                        <p>205€</p>
-                        <p>Mijoté de queue de boeuf et riz sauvage aux zestes de citron</p>
-                        <p>169€</p>
+                    <h2>Point d'orgue</h2>
+                    <div id="m_section">
+                        <div class="dish">
+                            <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                            <p>102€</p>
+                        </div>
+                        <div class="dish">
+                            <p>Langoustine poêlée, purée de patate douce</p>
+                            <p>205€</p>
+                        </div>
+                        <div class="dish">
+                            <p>Mijoté de queue de boeuf et riz sauvage aux zestes de citron</p>
+                            <p>169€</p>
+                        </div>
                     </div>
-                    <div>
-                        <h2>Mouvement final</h2>
-                        <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
-                        <p>Baba au rhum revisité avec son coulis de citron</p>
-                        <p>Tarte au citron meringuée destructurée</p>
-                    </div>
+                    <h2>Mouvement final</h2>
+                        <div id="m_section">
+                                <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
+                                <p>Baba au rhum revisité avec son coulis de citron</p>
+                                <p>Tarte au citron meringuée destructurée</p>
+                        </div>
                     <h3>La note enchantée</h3>
                 </div>
             </section>
