--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@
                         <div id="titre"> 
                             <p>Le chic à la française</p>
                         </div>
-                        <div id="menulcf">
+                        <div id="menu_lcf">
                             <h1>Le chic à la française</h1>
                             <div>
                                 <h2>Pour se mettre en appétit</h2>
