--- a/index4.html
+++ b/index4.html
@@ -19,7 +19,7 @@
                     <div id="titre"> 
                         <p>Le délice des papilles</p>
                     </div>
-                    <div id="menuldp">
+                    <div id="menu_ldp">
                         <h1>Le délice des papilles</h1>
                         <div>
                             <h2>Pour bien commencer</h2>
