--- a/index5.html
+++ b/index5.html
@@ -19,7 +19,7 @@
                     <div id="titre"> 
                         <p>La palette du goût</p>
                     </div>
-                    <div id="menulpg">
+                    <div id="menu_lpg">
                         <h1>La palette du goût</h1>
                         <div>
                             <h2>Esquisse</h2>
