MAJ background + positions css menu lne

--- a/index2.html
+++ b/index2.html
@@ -57,9 +57,15 @@
                     </div>
                     <h2>Mouvement final</h2>
                         <div id="m_section">
+                            <div class="dish">
                                 <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
+                            </div>
+                            <div class="dish">
                                 <p>Baba au rhum revisité avec son coulis de citron</p>
+                            </div>
+                            <div class="dish">
                                 <p>Tarte au citron meringuée destructurée</p>
+                            </div>
                         </div>
                     <h3>La note enchantée</h3>
                 </div>
