--- a/index2.html
+++ b/index2.html
@@ -25,34 +25,34 @@
                     <div id="m_section">
                         <div class="dish">
                             <p class="left">Ravioles de fois gras accompagnés de leur crème à la truffe</p>
-                            <p class="right">98€</p>
+                            <p class="right"><strong>98€</strong></p>
                         </div>
                         <div class="dish">
                             <p class="left">Caviar osciètre sur blini à la farine de blé noir</p>
-                            <p class="right">115€</p>
+                            <p class="right"><strong>115€</strong></p>
                         </div>
                         <div class="dish">
                             <p class="left">Homard et espuma de potiron mariné aux zestes d'orange</p>
-                            <p class="right">89€</p>
+                            <p class="right"><strong>89€</strong></p>
                         </div>
                         <div class="dish">
                             <p class="left">Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                            <p class="right">105€</p>
+                            <p class="right"><strong>105€</strong></p>
                         </div>
                     </div>
                     <h2>Point d'orgue</h2>
                     <div id="m_section">
                         <div class="dish">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
-                            <p>102€</p>
+                            <p><strong>102€</strong></p>
                         </div>
                         <div class="dish">
                             <p>Langoustine poêlée, purée de patate douce</p>
-                            <p>205€</p>
+                            <p><strong>205€</strong></p>
                         </div>
                         <div class="dish">
                             <p>Mijoté de queue de boeuf et riz sauvage aux zestes de citron</p>
-                            <p>169€</p>
+                            <p><strong>169€</strong></p>
                         </div>
                     </div>
                     <h2>Mouvement final</h2>
