maj css logo menu + barres titres

--- a/index2.html
+++ b/index2.html
@@ -16,11 +16,11 @@
         <!--Menus-->
         <div id="content">
             <section>
-                <div id="titre"> 
-                    <p>La note enchantée</p>
+                <div id="titre">
+                    <h1>La note enchantée</h1>
                 </div>
                 <div id="menu_lne">
-                    <h1>La note enchantée</h1>
+                    <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logob"/>
                     <h2>Prélude</h2>
                     <div id="m_section">
                         <div class="dish">
@@ -67,7 +67,7 @@
                                 <p>Tarte au citron meringuée destructurée</p>
                             </div>
                         </div>
-                    <h3>La note enchantée</h3>
+                    <img src="resources/logobmenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logob"/>
                 </div>
             </section>
         </div>
