maj html et css footer + ajout page mentions legales

--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <img src="resources/logo.png" alt="logo" title="logo" class="entete">
+                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
     </header>
         <!--Menus-->
@@ -54,14 +54,13 @@
             <p>Prochainement</p>
         </aside>
         <!--Pied de page-->
-        <footer>
-            <div>
-                <p>Mentions légales</p>
+        <footer id="foot">
+            <div id="mentions">
+                <a href="index6.html">Mentions légales</a>
             </div>
-            <div>
-                <p>Contactez-nous</p>
+            <div id="contact">
+                <a href="mailto:contact@ohmyfood.fr">Contactez-nous</a>
             </div>
-
         </footer>
     </body>
 </html>
