--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
         <!--En tête de la page-->
         <header>
             <div id="logo">
-                <img src="resources/logo.png" alt="logo" title="logo" class="entete">
+                <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
     </header>
         <!--Menus-->
@@ -21,7 +21,7 @@
                 </div>
                 <div id="menu_lne">
                     <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logob"/>
-                    <h2>Prélude</h2>
+                    <h2 class="h2_lne">Prélude</h2>
                     <div id="m_section">
                         <div class="dish">
                             <p class="left">Ravioles de fois gras accompagnés de leur crème à la truffe</p>
@@ -40,7 +40,7 @@
                             <p class="right"><strong>105€</strong></p>
                         </div>
                     </div>
-                    <h2>Point d'orgue</h2>
+                    <h2 class="h2_lne">Point d'orgue</h2>
                     <div id="m_section">
                         <div class="dish">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
@@ -55,7 +55,7 @@
                             <p><strong>169€</strong></p>
                         </div>
                     </div>
-                    <h2>Mouvement final</h2>
+                    <h2 class="h2_lne">Mouvement final</h2>
                         <div id="m_section">
                             <div class="dish">
                                 <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
@@ -76,14 +76,13 @@
             <p>Prochainement</p>
         </aside>
         <!--Pied de page-->
-        <footer>
-            <div>
-                <p>Mentions légales</p>
+        <footer id="foot">
+            <div id="mentions">
+                <a href="index6.html">Mentions légales</a>
             </div>
-            <div>
-                <p>Contactez-nous</p>
+            <div id="contact">
+                <a href="mailto:contact@ohmyfood.fr">Contactez-nous</a>
             </div>
-
         </footer>
     </body>
 </html>
