maj html + css 2e menu

--- a/index4.html
+++ b/index4.html
@@ -20,9 +20,9 @@
                         <p>Le délice des papilles</p>
                     </div>
                     <div id="menu_ldp">
-                        <h1>Le délice des papilles</h1>
-                        <div>
-                            <h2>Pour bien commencer</h2>
+                        <img src="resources/logomenu-3.png" alt="logo Le délice des papilles" titre="logo Le délice des papilles" id="logo_ldp"/>
+                        <h2>Pour bien commencer</h2>
+                        <div class="m_section">
                             <p>Tartare de thon assaisonné au yuzu</p>
                             <p>55€</p>
                             <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
@@ -30,7 +30,7 @@
                             <p>Velouté de cèpes aux truffes</p>
                             <p>56€</p>
                         </div>
-                        <div>
+                        <div class="m_section">
                             <h2>Pour bien continuer</h2>
                             <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
                             <p>110€</p>
@@ -39,7 +39,7 @@
                             <p>Côte de boeur angus et sa purée de panais</p>
                             <p>115€</p>
                         </div>
-                        <div>
+                        <div class="m_section">
                             <h2>Pour bien terminer</h2>
                             <p>Farandole de desserts du chef</p>
                             <p>55€</p>
