--- a/index5.html
+++ b/index5.html
@@ -20,8 +20,8 @@
                         <p>La palette du goût</p>
                     </div>
                     <div id="menu_lpg">
-                        <h1>La palette du goût</h1>
-                        <div>
+                        <img src="resources/logomenu-4.png" alt="logo La palette du goût" titre="logo La palette du goût" id="logo_lpg"/>
+                        <div class="m_section">
                             <h2>Esquisse</h2>
                             <p>Fricassée d'escargot au piment d'espelette</p>
                             <p>60€</p>
@@ -30,7 +30,7 @@
                             <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
                             <p>65€</p>
                         </div>
-                        <div>
+                        <div class="m_section">
                             <h2>Oeuvre de maître</h2>
                             <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
                             <p>70€</p>
@@ -39,7 +39,7 @@
                             <p>Filet de Turbot aux agrumes</p>
                             <p>125€</p>
                         </div>
-                        <div>
+                        <div class="m_section">
                             <h2>Au sommet de l'art</h2>
                             <p>Paris-Brest revisité</p>
                             <p>55€</p>
