--- a/index2.html
+++ b/index2.html
@@ -20,28 +20,28 @@
                     <h1>La note enchantée</h1>
                 </div>
                 <div id="menu_lne">
-                    <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logob"/>
+                    <img src="resources/logomenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
                     <h2 class="h2_lne">Prélude</h2>
-                    <div id="m_section">
+                    <div class="m_section">
                         <div class="dish">
-                            <p class="left">Ravioles de fois gras accompagnés de leur crème à la truffe</p>
-                            <p class="right"><strong>98€</strong></p>
+                            <p>Ravioles de fois gras accompagnés de leur crème à la truffe</p>
+                            <p><strong>98€</strong></p>
                         </div>
                         <div class="dish">
-                            <p class="left">Caviar osciètre sur blini à la farine de blé noir</p>
-                            <p class="right"><strong>115€</strong></p>
+                            <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                            <p><strong>115€</strong></p>
                         </div>
                         <div class="dish">
-                            <p class="left">Homard et espuma de potiron mariné aux zestes d'orange</p>
-                            <p class="right"><strong>89€</strong></p>
+                            <p>Homard et espuma de potiron mariné aux zestes d'orange</p>
+                            <p><strong>89€</strong></p>
                         </div>
                         <div class="dish">
-                            <p class="left">Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                            <p class="right"><strong>105€</strong></p>
+                            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                            <p><strong>105€</strong></p>
                         </div>
                     </div>
                     <h2 class="h2_lne">Point d'orgue</h2>
-                    <div id="m_section">
+                    <div class="m_section">
                         <div class="dish">
                             <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
                             <p><strong>102€</strong></p>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <h2 class="h2_lne">Mouvement final</h2>
-                        <div id="m_section">
+                        <div class="m_section">
                             <div class="dish">
                                 <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
                             </div>
@@ -67,14 +67,10 @@
                                 <p>Tarte au citron meringuée destructurée</p>
                             </div>
                         </div>
-                    <img src="resources/logobmenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logob"/>
+                    <img src="resources/logobmenu-1.png" alt="logo La note enchantée" titre="logo La note enchantée" id="logo_lne"/>
                 </div>
             </section>
         </div>
-            <!--Prochainement-->
-        <aside id="next">
-            <p>Prochainement</p>
-        </aside>
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
