--- a/index3.html
+++ b/index3.html
@@ -13,54 +13,73 @@
                 <a href="index.html"><img src="resources/logo.png" alt="logo" title="logo" class="entete"></a>
             </div>
     </header>
-        <!--Menus-->
-        <div id="content">
-                <section>
-                        <div id="titre"> 
-                            <p>Le chic à la française</p>
-                        </div>
-                        <div id="menu_lcf">
-                            <h1>Le chic à la française</h1>
-                            <div>
-                                <h2>Pour se mettre en appétit</h2>
-                                <p>Tartare de poulpe acidulé aux zestes d'orange</p>
-                                <p>79€</p>
-                                <p>Velouté de légumes d'antan</p>
-                                <p>57€</p>
-                                <p>Soupe à l'oignon revisités</p>
-                                <p>57€</p>
-                            </div>
-                            <div>
-                                <h2>Plaisir des papilles</h2>
-                                <p>Coquilles Saint-Jacques accompagnées d'une purée de Panais</p>
-                                <p>95€</p>
-                                <p>Magret de canard et parmentier de pommes de terres</p>
-                                <p>88€</p>
-                                <p>Pigeonneau d'Ille et Vilaine sur son lit de gnoccis aux légumes</p>
-                                <p>175€</p>
-                            </div>
-                            <div>
-                                <h2>Gourmandises sucrées</h2>
-                                <p>Pétales de violettes glacés et purée de noisette</p>
-                                <p>Fondant au chocolat revisité</p>
-                                <p>Millefeuille croustillant</p>
-                            </div>
-                            <h3>Le chic à la française</h3>
-                        </div>
-                    </section>
+    <!--Menus-->
+    <div id="content">
+        <div id="titre"> 
+            <p>Le chic à la française</p>
         </div>
-            <!--Prochainement-->
-        <aside id="next">
-            <p>Prochainement</p>
-        </aside>
+        <section id="menu_lcf">
+            <img src="resources/logomenu-2.png" alt="logo Le chic à la française" titre="logo Le chic à la française" id="logo_lcf"/>
+            <!--Entrees-->
+            <article id="top_m">
+                <h2>Pour se mettre en appétit</h2>
+                <div class="m_section">
+                    <div class="dish">
+                        <p>Tartare de poulpe acidulé aux zestes d'orange</p>
+                        <p>79€</p>
+                    </div>
+                    <div class="dish">                            
+                        <p>Velouté de légumes d'antan</p>
+                        <p>57€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Soupe à l'oignon revisités</p>
+                        <p>57€</p>
+                    </div>
+                </div>
+            </article>
+            <!--Plats-->
+            <article id="mid_m">
+                <h2>Plaisir des papilles</h2>
+                <div class="m_section">
+                    <div class="dish">
+                        <p>Coquilles Saint-Jacques accompagnées d'une purée de Panais</p>
+                        <p>95€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Magret de canard et parmentier de pommes de terres</p>
+                        <p>88€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Pigeonneau d'Ille et Vilaine sur son lit de gnoccis aux légumes</p>
+                        <p>175€</p>
+                    </div>
+                </div>
+            </article>
+            <!--Desserts-->
+            <article id="bot_m">
+                <h2>Gourmandises sucrées</h2>
+                <div class="m_section" id>
+                    <div class="dish">
+                        <p>Pétales de violettes glacés et purée de noisette</p>
+                    </div>
+                    <div class="dish">
+                        <p>Fondant au chocolat revisité</p>
+                    </div>
+                    <div class="dish">
+                        <p>Millefeuille croustillant</p>
+                    </div>
+                </div>
+            </article>
+        </section>
         <!--Pied de page-->
         <footer id="foot">
-            <div id="mentions">
+            <nav id="mentions">
                 <a href="index6.html">Mentions légales</a>
-            </div>
-            <div id="contact">
+            </nav>
+            <nav id="contact">
                 <a href="mailto:contact@ohmyfood.fr">Contactez-nous</a>
-            </div>
+            </nav>
         </footer>
     </body>
 </html>
