maj css menu 2 couleurs

--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
             <img src="resources/logomenu-2.png" alt="logo Le chic à la française" titre="logo Le chic à la française" id="logo_lcf"/>
             <!--Entrees-->
             <article id="top_m">
-                <h2>Pour se mettre en appétit</h2>
+                <h2 class="h2_lcf">Pour se mettre en appétit</h2>
                 <div class="m_section">
                     <div class="dish">
                         <p>Tartare de poulpe acidulé aux zestes d'orange</p>
@@ -40,7 +40,7 @@
             </article>
             <!--Plats-->
             <article id="mid_m">
-                <h2>Plaisir des papilles</h2>
+                <h2 class="h2_lcf">Plaisir des papilles</h2>
                 <div class="m_section">
                     <div class="dish">
                         <p>Coquilles Saint-Jacques accompagnées d'une purée de Panais</p>
@@ -58,7 +58,7 @@
             </article>
             <!--Desserts-->
             <article id="bot_m">
-                <h2>Gourmandises sucrées</h2>
+                <h2 class="h2_lcf">Gourmandises sucrées</h2>
                 <div class="m_section" id>
                     <div class="dish">
                         <p>Pétales de violettes glacés et purée de noisette</p>
