--- a/index4.html
+++ b/index4.html
@@ -15,47 +15,56 @@
     </header>
         <!--Menus-->
         <div id="content">
-                <section>
-                    <div id="titre"> 
-                        <p>Le délice des papilles</p>
+            <h1>Le délice des papilles</h1>
+            <section id="menu_ldp">
+                <img src="resources/logomenu-3.png" alt="logo Le délice des papilles" titre="logo Le délice des papilles" id="logo_ldp"/>
+                <h2 class="h2_ldp_t">Pour bien commencer</h2>
+                <article class="m_section">
+                    <div class="dish">
+                        <p>Tartare de thon assaisonné au yuzu</p>
+                        <p>55€</p>
                     </div>
-                    <div id="menu_ldp">
-                        <img src="resources/logomenu-3.png" alt="logo Le délice des papilles" titre="logo Le délice des papilles" id="logo_ldp"/>
-                        <h2>Pour bien commencer</h2>
-                        <div class="m_section">
-                            <p>Tartare de thon assaisonné au yuzu</p>
-                            <p>55€</p>
-                            <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                            <p>89€</p>
-                            <p>Velouté de cèpes aux truffes</p>
-                            <p>56€</p>
-                        </div>
-                        <div class="m_section">
-                            <h2>Pour bien continuer</h2>
-                            <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
-                            <p>110€</p>
-                            <p>Langouste rôtieet ses légumes de saison</p>
-                            <p>225€</p>
-                            <p>Côte de boeur angus et sa purée de panais</p>
-                            <p>115€</p>
-                        </div>
-                        <div class="m_section">
-                            <h2>Pour bien terminer</h2>
-                            <p>Farandole de desserts du chef</p>
-                            <p>55€</p>
-                            <p>Crème brûlée revisitée</p>
-                            <p>60€</p>
-                            <p>Tiramisu à la noisette</p>
-                            <p>55€</p>
-                        </div>
-                        <h3>Le délice des papilles</h3>
+                    <div class="dish">
+                        <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                        <p>89€</p>
                     </div>
-                </section>
+                    <div class="dish">
+                        <p>Velouté de cèpes aux truffes</p>
+                        <p>56€</p>
+                    </div>
+                </article>
+                <h2 class="h2_ldp_t">Pour bien continuer</h2>
+                <article class="m_section">
+                    <div class="dish">
+                        <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                        <p>110€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Langouste rôtieet ses légumes de saison</p>
+                        <p>225€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Côte de boeur angus et sa purée de panais</p>
+                        <p>115€</p>
+                    </div>
+                </article>
+                <h2 class="h2_ldp_t">Pour bien terminer</h2>
+                <article class="m_section">
+                    <div class="dish">
+                        <p>Farandole de desserts du chef</p>
+                        <p>55€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Crème brûlée revisitée</p>
+                        <p>60€</p>
+                    </div>
+                    <div class="dish">
+                        <p>Tiramisu à la noisette</p>
+                        <p>55€</p>
+                    </div>  
+                </article>
+            </section>
         </div>
-            <!--Prochainement-->
-        <aside id="next">
-            <p>Prochainement</p>
-        </aside>
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
