--- a/index4.html
+++ b/index4.html
@@ -33,7 +33,7 @@
                         <p>56€</p>
                     </div>
                 </article>
-                <h2 class="h2_ldp_t">Pour bien continuer</h2>
+                <h2 class="h2_ldp_m">Pour bien continuer</h2>
                 <article class="m_section">
                     <div class="dish">
                         <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
@@ -48,7 +48,7 @@
                         <p>115€</p>
                     </div>
                 </article>
-                <h2 class="h2_ldp_t">Pour bien terminer</h2>
+                <h2 class="h2_ldp_b">Pour bien terminer</h2>
                 <article class="m_section">
                     <div class="dish">
                         <p>Farandole de desserts du chef</p>
