maj html et css menu4

--- a/index5.html
+++ b/index5.html
@@ -15,47 +15,58 @@
         </header>
         <!--Menus-->
         <div id="content">
-                <section>
-                    <div id="titre"> 
-                        <p>La palette du goût</p>
-                    </div>
-                    <div id="menu_lpg">
-                        <img src="resources/logomenu-4.png" alt="logo La palette du goût" titre="logo La palette du goût" id="logo_lpg"/>
-                        <div class="m_section">
-                            <h2>Esquisse</h2>
+            <h1>La palette du goût</h1>
+            <section>
+                <div id="menu_lpg">
+                    <img src="resources/logomenu-4.png" alt="logo La palette du goût" titre="logo La palette du goût" id="logo_lpg"/>
+                    <h2 class="h2_lpg_t">Esquisse</h2>
+                    <article class="m_section">
+                        <div class="dish">
                             <p>Fricassée d'escargot au piment d'espelette</p>
                             <p>60€</p>
+                        </div>
+                            <div class="dish">
                             <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
                             <p>55€</p>
+                        </div>
+                            <div class="dish">
                             <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
                             <p>65€</p>
                         </div>
-                        <div class="m_section">
-                            <h2>Oeuvre de maître</h2>
+                    </article>
+                    <h2 class="h2_lpg_m">Oeuvre de maître</h2>
+                    <article class="m_section">
+                        <div class="dish">
                             <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
                             <p>70€</p>
+                        </div>
+                        <div class="dish">
                             <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
                             <p>85€</p>
+                        </div>
+                        <div class="dish">
                             <p>Filet de Turbot aux agrumes</p>
                             <p>125€</p>
                         </div>
-                        <div class="m_section">
-                            <h2>Au sommet de l'art</h2>
+                    </article>        
+                    <h2 class="h2_lpg_b">Au sommet de l'art</h2>
+                    <article class="m_section">
+                        <div class="dish">
                             <p>Paris-Brest revisité</p>
                             <p>55€</p>
+                        </div>
+                        <div class="dish">
                             <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
                             <p>65€</p>
+                        </div>
+                        <div class="dish">
                             <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
                             <p>60€</p>
                         </div>
-                        <h3>La palette du goût</h3>
-                    </div>
-                </section>
-        </div>
-            <!--Prochainement-->
-        <aside id="next">
-            <p>Prochainement</p>
-        </aside>
+                    </article>
+                </div>
+            </section>
+        </div>         
         <!--Pied de page-->
         <footer id="foot">
             <div id="mentions">
